# neora

./: .gitignore  Cargo.toml  LICENSE.txt  README.org
crates/neora-compositor/: Cargo.toml
crates/neora-compositor/src/: main.rs
crates/neora-protocol/: Cargo.toml  build.rs
crates/neora-protocol-generator/: Cargo.toml
crates/neora-protocol-generator/src/: lib.rs
crates/neora-protocol/src/: client.rs  lib.rs  unix.rs
crates/neora-scanner/: Cargo.toml
crates/neora-scanner/src/: lib.rs
protocols/: wayland.xml
src/: build_shaders.sh  main.rs  renderer.rs
