[package]
name = "neora-compositor"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
raw-window-handle = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vulkanalia = { version = "0.23.0", features = ["libloading", "provisional", "raw-window-handle", "window"] }
wayland-client = "0.31.4"
wayland-protocols = { version = "0.32.2", features = ["staging", "unstable", "client", "server"] }
wayland-protocols-wlr = { version = "0.3.2", features = ["client","server"] }
wayland-server = "0.31.3"
winit = { version = "0.30.3", default-features = false, features = ["rwh_06", "wayland"] }
