[package]
name = "neora-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""

[build-dependencies]
neora-protocol-generator = { path = "../neora-protocol-generator" }

[dependencies]
tracing = "0.1.40"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.29.0", features = ["socket", "uio", "net"] }
byteorder = "1.5.0"
